fix: allow vercel preview URLs in CORS