@@ -12,26 +12,23 @@ import java.util.List;
 
 @Configuration
 public class CorsConfig {
-
-    @Value("${app.cors.allowed-origins:http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173}")
+    // CORRECT
+    @Value("${app.cors.allowed-origins:http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173,https://wellfitness-gilt.vercel.app,https://www.wellfitness.in,https://wellfitness-git-dev-prashant-pals-projects-3d9c37eb.vercel.app}")
     private String allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // ✅ Trim spaces/quotes that Railway env vars might inject
-        List<String> origins = Arrays.stream(allowedOrigins.split(","))
-                .map(String::trim)
-                .map(s -> s.replace("\"", "").replace("'", ""))
-                .toList();
+        // ✅ Keep this exactly as is — don't touch
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
 
-        config.setAllowedOrigins(origins);
-        config.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
-        ));
+        // ✅ Add only this one new line
+        config.setAllowedOriginPatterns(List.of("https://*.vercel.app"));
+
+        // ✅ Keep everything below exactly as is — don't touch
+        config.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
-        config.setExposedHeaders(List.of("Authorization"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
